jenkins/jenkins-ingress-stage.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
   - hosts:
     - je.ingress-aws-kops-orion-test.challenge.validatekvsetlabs.com
     secretName: tls-secret-1
  rules:
  - host: je.ingress-aws-kops-orion-test.challenge.validatekvsetlabs.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins #.jenkins.svc.cluster.local
          servicePort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: jenkins
  namespace: default
spec:
  type: ExternalName
  externalName: jenkins.jenkins.svc.cluster.local
  ports:
  - port: 8080
